# ChudoPaint

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
Docs/: IPC.md  Plan.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  png.rs
src-tauri/src/errors/: mod.rs
src/components/: AppMenu.tsx
src/editor/: keyboard.ts
src/editor/canvas/: EditorCanvas.tsx  index.ts
src/editor/document/: createEditorDocument.ts  index.ts  types.ts
src/editor/errors/: AppError.test.ts  AppError.ts  index.ts
src/editor/files/: png.ts
src/editor/history/: CallbackCommand.ts  Command.ts  CommandHistory.test.ts  CommandHistory.ts  RasterPatchCommand.test.ts  RasterPatchCommand.ts  RasterSnapshotCommand.ts  SingleStepHistory.ts  index.ts
src/editor/layers/: LayersPanel.tsx  types.ts
src/editor/renderer/: DirtyRect.ts  RasterSurface.test.ts  RasterSurface.ts  TileGrid.test.ts  TileGrid.ts  composite.test.ts  composite.ts  index.ts
src/editor/selection/: types.ts
src/editor/session/: EditorSession.test.ts  EditorSession.ts  index.ts
src/editor/tools/: BrushTool.ts  EraserTool.ts  EyedropperTool.ts  FillTool.ts  PencilTool.ts  index.ts  (+2 more)
(+6 files in other folders)
