[package]
name = "chudopaint"
version = "0.1.0"
description = "An open-source raster image editor"
authors = ["ChudoPaint contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "chudopaint_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
